Fixed spacing issues on Edge (and potentially other browsers)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,6 @@ body {
   align-items: center;
   border-bottom: 1px solid $primary-border-color;
   display: flex;
-  flex: 0 0 20%;
   padding: 1em 1.5em;
 }
 
